- PR#6593: Functor application in tests/basic-modules fails after commit 15405

Bug fixes:
- PR#4539: change exception string raised when comparing functional values
  (Nicolas Braud-Santoni, report by Eric Cooper)
- PR#5887: move the byterun/*.h headers to byterun/caml/*.h to avoid header
    name clashes
  (Jérôme Vouillon and Adrien Nader and Peter Zotov)
- PR#6560: Wrong failure message for {Int32,Int64,NativeInt}.of_string
  (Maxime Dénès and Gabriel Scherer)
- PR#6648: show_module should indicate its elision
- PR#6650: Cty_constr not handled correctly by Subst
- PR#6651: Failing component lookup

Features wishes:
- PR#6367: introduce Asttypes.arg_label to encode labelled arguments
- PR#6611: remove the option wrapper on optional arguments in the syntax tree
- PR#6742: remove duplicate virtual_flag information from Tstr_class

OCaml 4.02.2:
-------------

Compilers:
- PR#6475: accept -o in ocamlc when compiling C files
  (Vincent Laporte, Peter Zotov)
- PR#6600: make -short-paths faster by building the printing map
  incrementally (Jacques Garrigue)

Toplevel and debugger:
- PR#5958: generalized polymorphic #install_printer
  (Pierre Chambart and Grégoire Henry)

OCamlbuild:
- PR#6237: explicit "infer" tag to control or disable menhir --infer
  (Hugo Heuzard)
- PR#6625: pass -linkpkg to files built with -output-obj.
  (Peter Zotov)
- PR#6702: explicit "linkpkg" and "dontlink(foo)" flags
  (Peter Zotov, Gabriel Scherer)
- PR#6712: Ignore common VCS directories
  (Peter Zotov)
- PR#6720: pass -g to C compilers when tag 'debug' is set
  (Peter Zotov, Gabriel Scherer)

Tools:
- PR#6641: add -g, -ocamlcflags, -ocamloptflags options to ocamlmklib
  (Peter Zotov)

Bug fixes:
- PR#5836, PR#6684: printing lazy values in ocamldebug may segfault
  (Gabriel Scherer)
- PR#6616: allow meaningful use of -use-runtime without -custom.
  (Peter Zotov)
- PR#6628: Configure script rejects legitimate arguments
  (Michael Grünewald, Damien Doligez)